--- a/.travis.yml
+++ b/.travis.yml
@@ -23,13 +23,13 @@ script:
   - docker build -t udagram-api-feed ./udagram-api-feed
   - docker build -t udagram-api-user ./udagram-api-user
   - docker build -t udagram-frontend ./udagram-frontend
-  - docker build -t reverseproxy ./reverseproxy
+  - docker build -t udagram-reverseproxy ./udagram-reverseproxy
 # Faites de même pour les trois autres images
 # Marquage
   - docker tag udagram-api-feed karim199260/udagram-api-feed:v1
   - docker tag udagram-api-feed karim199260/udagram-api-user:v1
   - docker tag udagram-api-feed karim199260/udagram-frontend:v1
-  - docker tag udagram-api-feed karim199260/reverseproxy:v1
+  - docker tag udagram-api-feed karim199260/udagram-reverseproxy:v1
 # Faire de même pour les trois autres images ``
 # ```bash
 # Push
@@ -39,5 +39,5 @@ after_success:
   - docker push karim199260/udagram-api-feed:v1
   - docker push karim199260/udagram-api-user:v1
   - docker push karim199260/udagram-frontend:v1
-  - docker push karim199260/reverseproxy:v1
+  - docker push karim199260/udagram-reverseproxy:v1
 # Faites de même pour les trois autres images
